--- a/casino-strategy/oscar-grind/index.html
+++ b/casino-strategy/oscar-grind/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-
 <html data-theme="light" lang="ko">
 <head>
 <meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
+
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>오스카 그라인드 배팅법 | 1유닛 목표 바카라 계산기 | 88ST</title>
 <meta content="오스카 그라인드(Oscar’s Grind) 배팅법을 바카라 PLAYER 2.00 / BANKER 1.97 기준으로 계산합니다. 사이클 목표 이익(1유닛)을 달성하면 리셋하는 방식으로 운영하세요." name="description"/>
-<meta content="오스카 그라인드 배팅법, 오스카 그라인드 계산기, 1유닛 목표 전략, 바카라 배팅전략, 리스크 관리" name="keywords"/>
+<meta content="오스카 그라인드, Oscar's Grind, 바카라 전략, 자금관리, 리스크 관리, 손익 시뮬레이션, 88ST" name="keywords"/>
 <meta content="index,follow" name="robots"/>
 <link href="https://88st.cloud/casino-strategy/oscar-grind/" rel="canonical"/>
 <meta content="website" property="og:type"/>
@@ -45,9 +53,8 @@
 }
   </script>
 <meta content="/img/logo.png" property="og:image"/>
-  <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
-
-  <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/><link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body class="st-app">
 <main class="st-land-wrap">
@@ -91,16 +98,14 @@
 <details><summary>세션/자금 관리 트래커는 뭘 보여주나요?</summary><div class="st-land-note" style="margin-top:8px;">세션 손익(P/L), 최대 낙폭(MDD), 현재 단계와 최근 라운드 로그를 통해 현재 위험도를 한눈에 보여줍니다.</div></details>
 <details><summary>이 전략은 수익을 보장하나요?</summary><div class="st-land-note" style="margin-top:8px;">어떤 배팅기법도 수익을 보장하지 않습니다. 변동성과 한도/규정/커미션 등의 변수가 크므로 책임감 있게 이용해 주세요.</div></details>
 </section>
-
-        <section class="st-land-card" id="vvipRunTool">
-          <h2>관련 도구 바로 실행</h2>
-          <p class="st-land-note">읽은 내용을 바로 계산기로 연결하세요. <b>최근 입력 자동 저장/1클릭 복원</b>도 지원합니다.</p>
-          <div class="st-land-cta">
-            <a class="st-land-btn primary" href="/tool-casino/#oscar">오스카 그라인드 계산기 열기</a>
-            <a class="st-land-btn" href="/tool-casino/">카지노 전략 계산기</a>
-          </div>
-        </section>
-
+<section class="st-land-card" id="vvipRunTool">
+<h2>관련 도구 바로 실행</h2>
+<p class="st-land-note">읽은 내용을 바로 계산기로 연결하세요. <b>최근 입력 자동 저장/1클릭 복원</b>도 지원합니다.</p>
+<div class="st-land-cta">
+<a class="st-land-btn primary" href="/tool-casino/#oscar">오스카 그라인드 계산기 열기</a>
+<a class="st-land-btn" href="/tool-casino/">카지노 전략 계산기</a>
+</div>
+</section>
 </div>
 </main>
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
