--- a/fortune/index.html
+++ b/fortune/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html data-theme="light" lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-  <title>오늘의 운 브리핑 | 별자리·연애·신년운세 | 88ST</title>
-  <meta name="description" content="오늘의 운 브리핑(별자리/연애/신년). 엔터테인먼트용으로 리듬·컨디션·절제 포인트를 고급스럽게 정리합니다."/>
-  <meta name="keywords" content="오늘의 운세, 별자리 운세, 연애운, 신년운세, 띠 운세, 운세 듣기, 88ST"/>
-  <link rel="canonical" href="https://88st.cloud/fortune/"/>
-  <meta name="robots" content="index,follow"/>
+<meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
 
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="88 (팔팔커뮤니티)"/>
-  <meta property="og:title" content="오늘의 운 브리핑 | 88ST"/>
-  <meta property="og:description" content="별자리/연애/신년 운세를 ‘브리핑’ 톤으로 고급스럽게 정리합니다."/>
-  <meta property="og:url" content="https://88st.cloud/fortune/"/>
-  <meta property="og:image" content="https://88st.cloud/img/logo.png"/>
-
-  <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
-
-  <link rel="stylesheet" href="/assets/css/x.9d7841e705c5.css"/>
-  <script src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
-
-  <script type="application/ld+json">
+<meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
+<title>오늘의 운 브리핑 | 별자리·연애·신년운세 | 88ST</title>
+<meta content="오늘의 운 브리핑(별자리/연애/신년). 엔터테인먼트용으로 리듬·컨디션·절제 포인트를 고급스럽게 정리합니다." name="description"/>
+<meta content="오늘의 운, 운세 브리핑, AI 운세, 데일리 포춘, 행운 점수, 88ST" name="keywords"/>
+<link href="https://88st.cloud/fortune/" rel="canonical"/>
+<meta content="index,follow" name="robots"/>
+<meta content="website" property="og:type"/>
+<meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
+<meta content="오늘의 운 브리핑 | 88ST" property="og:title"/>
+<meta content="별자리/연애/신년 운세를 ‘브리핑’ 톤으로 고급스럽게 정리합니다." property="og:description"/>
+<meta content="https://88st.cloud/fortune/" property="og:url"/>
+<meta content="https://88st.cloud/img/logo.png" property="og:image"/>
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="/assets/css/x.9d7841e705c5.css" rel="stylesheet"/>
+<script src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
+<script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "BreadcrumbList",
@@ -32,17 +37,14 @@
     ]
   }
   </script>
-
-  <script defer src="/assets/js/j.9179477b9417.js"></script>
-  <link rel="stylesheet" href="/assets/c.9995eeb5cf82.css"/>
-  <link rel="stylesheet" href="/assets/c.0b3d8a45f8c9.css"/>
-  <script defer src="/assets/js/j.efba3509e62c.js"></script>
-  <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css"/>
-  <script defer src="/assets/js/j.8829a3ccde44.js?v=85"></script>
-
-  <link rel="stylesheet" href="/assets/css/fortune.v62.20260217.css"/>
-
-  <style>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
+<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
+<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.efba3509e62c.js"></script>
+<link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
+<link href="/assets/css/fortune.v62.20260217.css" rel="stylesheet"/>
+<style>
     /* Fortune page refinements (keeps base language + premium spacing) */
     .page-actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
     .page-actions a{display:inline-flex;align-items:center;gap:8px}
@@ -54,154 +56,135 @@
     .fortune-kpi .v{margin-top:6px;font-size:14px;font-weight:950;line-height:1.5;color:rgba(255,255,255,.95)}
     .fortune-mini{font-size:12px;color:rgba(255,255,255,.72);line-height:1.55;margin-top:10px}
   </style>
-
-  <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
-
-  <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body>
-  <h1 style="position:absolute;left:-9999px;">오늘의 운 브리핑 | 별자리·연애·신년운세</h1>
-
-  <div class="header">
-    <a class="logoLink" href="/" aria-label="홈으로 이동">
-      <img class="logoImg" src="/img/logo.png" alt="88 커뮤니티 로고"/>
-    </a>
-    <div class="sub">컨디션·리듬·절제를 위한 “브리핑” — 엔터테인먼트용</div>
-  </div>
-
-  <div class="section-wrap">
-    <div class="section" data-role="fortunePage">
-      <div class="section-header">
-        <div>
-          <div class="title"><span class="badge">FORTUNE</span>운세 컨시어지</div>
-          <div class="fortune-kicker" id="fpScope">오늘 브리핑</div>
-        </div>
-        <div class="page-actions">
-          <a class="insight-btn btn-mini" href="/">홈 <span aria-hidden="true">→</span></a>
-          <a class="insight-btn btn-mini" href="/analysis/">분석기 <span aria-hidden="true">→</span></a>
-        </div>
-      </div>
-
-      <div class="seg-row" role="tablist" aria-label="운세 탭">
-        <button class="seg active" type="button" data-ftab="today">오늘</button>
-        <button class="seg" type="button" data-ftab="love">연애</button>
-        <button class="seg" type="button" data-ftab="newyear">신년</button>
-        <button class="seg" type="button" data-ftab="zodiac">띠</button>
-        <button class="seg" type="button" data-ftab="silly">쓸데없음</button>
-      </div>
-
-      
-      <div class="fortune-widget" style="margin-top:12px">
-        <div class="fortune-left">
-          <div class="fortune-ring" role="img" aria-label="운 점수">
-            <div class="fortune-ring-inner" id="fpRing">
-              <div class="fortune-score" id="fpScore">—</div>
-              <div class="fortune-date" id="fpDate">—</div>
-            </div>
-          </div>
-
-          <div class="fortune-pick fortune-profile">
-            <label class="fortune-label" for="fpDob">사주 입력</label>
-            <div class="fortune-profile-grid">
-              <input class="fortune-input" id="fpDob" type="date" inputmode="numeric" placeholder="생년월일(YYYY-MM-DD)"/>
-              <input class="fortune-input" id="fpTime" type="time" inputmode="numeric" placeholder="태어난 시(선택)"/>
-              <select class="fortune-input" id="fpGender" aria-label="성별">
-                <option value="">성별(선택)</option>
-                <option value="m">남</option>
-                <option value="f">여</option>
-              </select>
-              <button class="fortune-btn fortune-query" id="fpQuery" type="button">조회</button>
-            </div>
-            <div class="fortune-profile-hint fortune-muted">입력하면 <b>별자리/띠</b>가 자동 적용됩니다. (간단 계산)</div>
-          </div>
-
-          <div class="fortune-pick" id="fpPickSign">
-            <label class="fortune-label" for="fpSign">별자리</label>
-            <select class="insight-select" id="fpSign">
-              <option value="aries">양자리</option>
-              <option value="taurus">황소자리</option>
-              <option value="gemini">쌍둥이자리</option>
-              <option value="cancer">게자리</option>
-              <option value="leo">사자자리</option>
-              <option value="virgo">처녀자리</option>
-              <option value="libra">천칭자리</option>
-              <option value="scorpio">전갈자리</option>
-              <option value="sagittarius">사수자리</option>
-              <option value="capricorn">염소자리</option>
-              <option value="aquarius">물병자리</option>
-              <option value="pisces">물고기자리</option>
-            </select>
-          </div>
-
-          <div class="fortune-pick" id="fpPickZodiac" hidden>
-            <label class="fortune-label" for="fpZodiac">띠</label>
-            <select class="insight-select" id="fpZodiac">
-              <option value="rat">쥐띠</option>
-              <option value="ox">소띠</option>
-              <option value="tiger">호랑이띠</option>
-              <option value="rabbit">토끼띠</option>
-              <option value="dragon">용띠</option>
-              <option value="snake">뱀띠</option>
-              <option value="horse">말띠</option>
-              <option value="goat">양띠</option>
-              <option value="monkey">원숭이띠</option>
-              <option value="rooster">닭띠</option>
-              <option value="dog">개띠</option>
-              <option value="pig">돼지띠</option>
-            </select>
-          </div>
-
-          <div class="fortune-pick" id="fpPickLevel">
-            <label class="fortune-label" for="fpLevel">브리핑 레벨</label>
-            <select class="insight-select" id="fpLevel">
-              <option value="beginner">초급</option>
-              <option value="pro">프로</option>
-              <option value="risk">하이리스크 경고</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="fortune-right">
-          <div class="fortune-head" id="fpHead">—</div>
-          <div class="fortune-lines">
-            <div class="fortune-line"><span id="fpL1">행운 키워드</span><b id="fpV1">—</b></div>
-            <div class="fortune-line"><span id="fpL2">행운 컬러</span><b id="fpV2">—</b></div>
-            <div class="fortune-line"><span id="fpL3">행운 숫자</span><b id="fpV3">—</b></div>
-            <div class="fortune-line"><span id="fpL4">미션</span><b id="fpV4">—</b></div>
-            <div class="fortune-line"><span id="fpL5">오늘의 금지 행동</span><b id="fpV5">—</b></div>
-          </div>
-
-          <div class="fortune-pro" id="fpProCard" hidden>
-            <div class="fortune-pro-title">프로 체크리스트</div>
-            <ul class="fortune-pro-list" id="fpProList"></ul>
-          </div>
-
-          <div class="fortune-kpis" id="fpKpis">
-            <div class="fortune-kpi"><div class="k" id="fpK1">금전 브리핑</div><div class="v" id="fpKV1">—</div></div>
-            <div class="fortune-kpi"><div class="k" id="fpK2">컨디션 브리핑</div><div class="v" id="fpKV2">—</div></div>
-            <div class="fortune-kpi"><div class="k" id="fpK3">연애/관계 브리핑</div><div class="v" id="fpKV3">—</div></div>
-            <div class="fortune-kpi"><div class="k" id="fpK4">주의 포인트</div><div class="v" id="fpKV4">—</div></div>
-          </div>
-
-          <div class="fortune-actions">
-            <button class="insight-btn" id="fpSpeak" type="button">운세 듣기</button>
-            <button class="fortune-btn" id="fpCopy" type="button">요약 복사</button>
-            <button class="fortune-btn" id="fpStop" type="button">정지</button>
-          </div>
-
-          <div class="fortune-silly" hidden id="fpSillyBox">
-            <div class="fortune-silly-title">쓸데없지만 은근 쓸모있는 한 줄</div>
-            <div class="fortune-silly-text" id="fpSillyText">—</div>
-          </div>
-
-          <div class="fortune-note">※ 엔터테인먼트용 브리핑입니다. 예측/보장을 주장하지 않으며, <b>과몰입을 피하고</b> 컨디션·리듬 관리에 활용하세요.</div>
-        </div>
-      </div>
-
-      <div class="fortune-mini">브리핑은 하루 동안 고정됩니다(새로고침해도 동일). “쓸데없음” 탭은 공유용으로 특히 잘 퍼집니다.</div>
-    </div>
-  </div>
-
-  <script defer src="/assets/js/fortune.v62.20260217.js"></script>
+<h1 style="position:absolute;left:-9999px;">오늘의 운 브리핑 | 별자리·연애·신년운세</h1>
+<div class="header">
+<a aria-label="홈으로 이동" class="logoLink" href="/">
+<img alt="88 커뮤니티 로고" class="logoImg" src="/img/logo.png"/>
+</a>
+<div class="sub">컨디션·리듬·절제를 위한 “브리핑” — 엔터테인먼트용</div>
+</div>
+<div class="section-wrap">
+<div class="section" data-role="fortunePage">
+<div class="section-header">
+<div>
+<div class="title"><span class="badge">FORTUNE</span>운세 컨시어지</div>
+<div class="fortune-kicker" id="fpScope">오늘 브리핑</div>
+</div>
+<div class="page-actions">
+<a class="insight-btn btn-mini" href="/">홈 <span aria-hidden="true">→</span></a>
+<a class="insight-btn btn-mini" href="/analysis/">분석기 <span aria-hidden="true">→</span></a>
+</div>
+</div>
+<div aria-label="운세 탭" class="seg-row" role="tablist">
+<button class="seg active" data-ftab="today" type="button">오늘</button>
+<button class="seg" data-ftab="love" type="button">연애</button>
+<button class="seg" data-ftab="newyear" type="button">신년</button>
+<button class="seg" data-ftab="zodiac" type="button">띠</button>
+<button class="seg" data-ftab="silly" type="button">쓸데없음</button>
+</div>
+<div class="fortune-widget" style="margin-top:12px">
+<div class="fortune-left">
+<div aria-label="운 점수" class="fortune-ring" role="img">
+<div class="fortune-ring-inner" id="fpRing">
+<div class="fortune-score" id="fpScore">—</div>
+<div class="fortune-date" id="fpDate">—</div>
+</div>
+</div>
+<div class="fortune-pick fortune-profile">
+<label class="fortune-label" for="fpDob">사주 입력</label>
+<div class="fortune-profile-grid">
+<input class="fortune-input" id="fpDob" inputmode="numeric" placeholder="생년월일(YYYY-MM-DD)" type="date"/>
+<input class="fortune-input" id="fpTime" inputmode="numeric" placeholder="태어난 시(선택)" type="time"/>
+<select aria-label="성별" class="fortune-input" id="fpGender">
+<option value="">성별(선택)</option>
+<option value="m">남</option>
+<option value="f">여</option>
+</select>
+<button class="fortune-btn fortune-query" id="fpQuery" type="button">조회</button>
+</div>
+<div class="fortune-profile-hint fortune-muted">입력하면 <b>별자리/띠</b>가 자동 적용됩니다. (간단 계산)</div>
+</div>
+<div class="fortune-pick" id="fpPickSign">
+<label class="fortune-label" for="fpSign">별자리</label>
+<select class="insight-select" id="fpSign">
+<option value="aries">양자리</option>
+<option value="taurus">황소자리</option>
+<option value="gemini">쌍둥이자리</option>
+<option value="cancer">게자리</option>
+<option value="leo">사자자리</option>
+<option value="virgo">처녀자리</option>
+<option value="libra">천칭자리</option>
+<option value="scorpio">전갈자리</option>
+<option value="sagittarius">사수자리</option>
+<option value="capricorn">염소자리</option>
+<option value="aquarius">물병자리</option>
+<option value="pisces">물고기자리</option>
+</select>
+</div>
+<div class="fortune-pick" hidden="" id="fpPickZodiac">
+<label class="fortune-label" for="fpZodiac">띠</label>
+<select class="insight-select" id="fpZodiac">
+<option value="rat">쥐띠</option>
+<option value="ox">소띠</option>
+<option value="tiger">호랑이띠</option>
+<option value="rabbit">토끼띠</option>
+<option value="dragon">용띠</option>
+<option value="snake">뱀띠</option>
+<option value="horse">말띠</option>
+<option value="goat">양띠</option>
+<option value="monkey">원숭이띠</option>
+<option value="rooster">닭띠</option>
+<option value="dog">개띠</option>
+<option value="pig">돼지띠</option>
+</select>
+</div>
+<div class="fortune-pick" id="fpPickLevel">
+<label class="fortune-label" for="fpLevel">브리핑 레벨</label>
+<select class="insight-select" id="fpLevel">
+<option value="beginner">초급</option>
+<option value="pro">프로</option>
+<option value="risk">하이리스크 경고</option>
+</select>
+</div>
+</div>
+<div class="fortune-right">
+<div class="fortune-head" id="fpHead">—</div>
+<div class="fortune-lines">
+<div class="fortune-line"><span id="fpL1">행운 키워드</span><b id="fpV1">—</b></div>
+<div class="fortune-line"><span id="fpL2">행운 컬러</span><b id="fpV2">—</b></div>
+<div class="fortune-line"><span id="fpL3">행운 숫자</span><b id="fpV3">—</b></div>
+<div class="fortune-line"><span id="fpL4">미션</span><b id="fpV4">—</b></div>
+<div class="fortune-line"><span id="fpL5">오늘의 금지 행동</span><b id="fpV5">—</b></div>
+</div>
+<div class="fortune-pro" hidden="" id="fpProCard">
+<div class="fortune-pro-title">프로 체크리스트</div>
+<ul class="fortune-pro-list" id="fpProList"></ul>
+</div>
+<div class="fortune-kpis" id="fpKpis">
+<div class="fortune-kpi"><div class="k" id="fpK1">금전 브리핑</div><div class="v" id="fpKV1">—</div></div>
+<div class="fortune-kpi"><div class="k" id="fpK2">컨디션 브리핑</div><div class="v" id="fpKV2">—</div></div>
+<div class="fortune-kpi"><div class="k" id="fpK3">연애/관계 브리핑</div><div class="v" id="fpKV3">—</div></div>
+<div class="fortune-kpi"><div class="k" id="fpK4">주의 포인트</div><div class="v" id="fpKV4">—</div></div>
+</div>
+<div class="fortune-actions">
+<button class="insight-btn" id="fpSpeak" type="button">운세 듣기</button>
+<button class="fortune-btn" id="fpCopy" type="button">요약 복사</button>
+<button class="fortune-btn" id="fpStop" type="button">정지</button>
+</div>
+<div class="fortune-silly" hidden="" id="fpSillyBox">
+<div class="fortune-silly-title">쓸데없지만 은근 쓸모있는 한 줄</div>
+<div class="fortune-silly-text" id="fpSillyText">—</div>
+</div>
+<div class="fortune-note">※ 엔터테인먼트용 브리핑입니다. 예측/보장을 주장하지 않으며, <b>과몰입을 피하고</b> 컨디션·리듬 관리에 활용하세요.</div>
+</div>
+</div>
+<div class="fortune-mini">브리핑은 하루 동안 고정됩니다(새로고침해도 동일). “쓸데없음” 탭은 공유용으로 특히 잘 퍼집니다.</div>
+</div>
+</div>
+<script defer="" src="/assets/js/fortune.v62.20260217.js"></script>
 </body>
 </html>
