--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-
 <html data-theme="light" lang="ko">
 <head>
 <meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
+
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
 <title>88ST | 스포츠 배당 분석기 · EV/마진 · 켈리 계산기</title>
 <meta content="스포츠 배당 분석기(오버라운드·마진·EV·공정배당) + 켈리 비중 계산기, 슬롯 RTP 분석, 카지노 전략/미니게임 가이드와 오늘의 운 브리핑(별자리/띠/연애/신년)을 한 곳에서 빠르게 확인하세요." name="description"/>
-<meta content="스포츠 배당 분석기, 배당 마진 계산기, 오버라운드 계산기, EV 계산기, 공정배당 계산기, 공정확률, 켈리 공식 계산기, 배당 확률 변환기, 슬롯 RTP 분석기, 바카라 전략 계산기, 미니게임 분석기, 입플 체크리스트, 인증사이트, 88 커뮤니티, 팔팔커뮤니티" name="keywords"/>
+<meta content="스포츠 배당 분석기, 배당률 계산기, EV 계산기, 기대값 계산, 공정배당, 오버라운드, 마진(vig) 제거, 켈리 기준, 배팅 자금관리, 배당 비교, 88ST" name="keywords"/>
 <link href="https://88st.cloud/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
@@ -18,8 +26,7 @@
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="/assets/css/x.9d7841e705c5.css" rel="stylesheet"/>
 <link href="/assets/c.banner.v81.20260219.css" rel="stylesheet"/>
-
-<script defer src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
+<script defer="" src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -60,7 +67,7 @@
 }
 </script>
 <link href="/assets/c.a693fe39b0c5.css" rel="stylesheet"/>
-<script defer src="/assets/js/j.9179477b9417.js"></script>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
@@ -93,12 +100,9 @@
   ]
 }
 </script>
-
-
-  <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
-
-  <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
-<script defer src="/assets/js/j.searchtyping.v83.20260219.js"></script>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
+<script defer="" src="/assets/js/j.searchtyping.v83.20260219.js"></script>
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
@@ -109,34 +113,29 @@
 <div class="sub">배당을 숫자로 정리하는 가장 빠른 분석기</div>
 </div>
 <div class="section-wrap">
-<div class="mainHero" aria-label="메인 배너">
-  <div class="heroGrid">
-    <div class="brandMark" aria-hidden="true">
-      <img class="brandImg" src="/img/logo.png" alt="">
-    </div>
-    <div class="heroCopy">
-      <h1 class="heroLead">구글에서 <span style="font-weight:1000;">88ST.Cloud</span> 검색</h1>
-      <p class="heroSub">가장 빠른 길: 검색창에 딱 한 번만 입력하면 끝</p>
-      <div class="searchGlass" role="img" aria-label="구글 검색창 템플릿">
-        <div class="searchIcon" aria-hidden="true">
-          <!-- Google G (simple) -->
-          <svg width="26" height="26" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <path d="M21.6 12.27c0-.71-.06-1.4-.18-2.07H12v3.92h5.38a4.6 4.6 0 0 1-1.99 3.01v2.5h3.22c1.89-1.74 2.99-4.3 2.99-7.36Z" fill="#4285F4"/>
-            <path d="M12 22c2.7 0 4.97-.9 6.63-2.44l-3.22-2.5c-.9.6-2.05.96-3.41.96-2.62 0-4.84-1.77-5.63-4.15H3.03v2.57A10 10 0 0 0 12 22Z" fill="#34A853"/>
-            <path d="M6.37 13.87A6 6 0 0 1 6.06 12c0-.65.11-1.28.31-1.87V7.56H3.03A10 10 0 0 0 2 12c0 1.61.38 3.13 1.03 4.44l3.34-2.57Z" fill="#FBBC05"/>
-            <path d="M12 5.98c1.47 0 2.79.5 3.83 1.49l2.87-2.87C16.96 2.87 14.7 2 12 2A10 10 0 0 0 3.03 7.56l3.34 2.57c.79-2.38 3.01-4.15 5.63-4.15Z" fill="#EA4335"/>
-          </svg>
-        </div>
-        <div class="searchText"><span id="searchTyping" aria-label="검색어">88ST.Cloud</span><span class="caret" aria-hidden="true"></span></div>
-      </div>
+<div aria-label="메인 배너" class="mainHero">
+<div class="heroGrid">
+<div aria-hidden="true" class="brandMark">
+<img alt="" class="brandImg" src="/img/logo.png"/>
 </div>
-  </div>
+<div class="heroCopy">
+<h1 class="heroLead">구글에서 <span style="font-weight:1000;">88ST.Cloud</span> 검색</h1>
+<p class="heroSub">가장 빠른 길: 검색창에 딱 한 번만 입력하면 끝</p>
+<div aria-label="구글 검색창 템플릿" class="searchGlass" role="img">
+<div aria-hidden="true" class="searchIcon">
+<!-- Google G (simple) -->
+<svg aria-hidden="true" fill="none" height="26" viewbox="0 0 24 24" width="26">
+<path d="M21.6 12.27c0-.71-.06-1.4-.18-2.07H12v3.92h5.38a4.6 4.6 0 0 1-1.99 3.01v2.5h3.22c1.89-1.74 2.99-4.3 2.99-7.36Z" fill="#4285F4"></path>
+<path d="M12 22c2.7 0 4.97-.9 6.63-2.44l-3.22-2.5c-.9.6-2.05.96-3.41.96-2.62 0-4.84-1.77-5.63-4.15H3.03v2.57A10 10 0 0 0 12 22Z" fill="#34A853"></path>
+<path d="M6.37 13.87A6 6 0 0 1 6.06 12c0-.65.11-1.28.31-1.87V7.56H3.03A10 10 0 0 0 2 12c0 1.61.38 3.13 1.03 4.44l3.34-2.57Z" fill="#FBBC05"></path>
+<path d="M12 5.98c1.47 0 2.79.5 3.83 1.49l2.87-2.87C16.96 2.87 14.7 2 12 2A10 10 0 0 0 3.03 7.56l3.34 2.57c.79-2.38 3.01-4.15 5.63-4.15Z" fill="#EA4335"></path>
+</svg>
 </div>
-
-
-
-
-
+<div class="searchText"><span aria-label="검색어" id="searchTyping">88ST.Cloud</span><span aria-hidden="true" class="caret"></span></div>
+</div>
+</div>
+</div>
+</div>
 <div class="section" id="whySection">
 <div class="title"><span class="badge">WHY</span>왜 88 분석기를 써야 하나요?</div>
 <div aria-label="WHY 섹션(스포츠/카지노)" class="why-split">
@@ -199,9 +198,7 @@
 </div>
 </div>
 </div>
-
 </div>
-
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
