--- a/speed/index.html
+++ b/speed/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-
 <html data-theme="light" lang="ko">
 <head>
 <meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
+
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>랜딩 페이지 | 이동 안내 | 88ST</title>
-<meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." name="description"/>
+<meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." name="description"/><meta content="88ST, 가입코드, 이벤트, 추천, 빠른 이동" name="keywords"/>
 <link href="https://88st.cloud/speed/" rel="canonical"/>
 <meta content="noindex,follow" name="robots"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
@@ -13,9 +21,8 @@
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/css/x.05f40005e250.css" rel="stylesheet"/>
 <meta content="랜딩 페이지 | 이동 안내 | 88ST" property="og:title"/><meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." property="og:description"/><meta content="website" property="og:type"/><meta content="https://88st.cloud/speed/" property="og:url"/><meta content="/img/logo.png" property="og:image"/>
-  <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
-
-  <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/><link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/><link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body>
 <div class="st-landing-wrap">
