--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
-
 <html data-theme="light" lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
 
-  <title>Bet365 가상게임 배당 마진·공정배당 분석기 | 전 종목 | 88ST</title>
-  <meta name="description" content="Bet365 가상게임(가상축구·농구·테니스·아이스하키·야구·미식축구·크리켓·경마·그레이하운드·레이싱 등) 배당을 입력하면 마진(오버라운드), 공정확률/공정배당, 공정대비(덜 불리한 선택)를 즉시 계산합니다. 오버/언더는 라인을 여러 개 한 번에 붙여넣기 지원."/>
-  <meta name="keywords" content="bet365 가상게임, bet365 가상스포츠, bet365 가상축구, bet365 가상농구, bet365 가상테니스, bet365 가상아이스하키, bet365 가상야구, bet365 가상미식축구, bet365 가상크리켓, bet365 가상경마, bet365 그레이하운드, virtual sports odds, 승무패, 오버언더, 마진, 오버라운드, 공정확률, 공정배당"/>
-  <link rel="canonical" href="https://88st.cloud/tool-virtual/"/>
-  <meta name="robots" content="index,follow"/>
-
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="88 (팔팔커뮤니티)"/>
-  <meta property="og:title" content="Bet365 가상게임 배당 마진·공정배당 분석기 | 전 종목 | 88ST"/>
-  <meta property="og:description" content="가상게임 배당을 넣으면 마진/공정확률/공정배당/공정대비(덜 불리한 선택)를 한 번에 계산합니다. 오버/언더 라인 다중 붙여넣기 지원."/>
-  <meta property="og:url" content="https://88st.cloud/tool-virtual/"/>
-
-  <script type="application/ld+json">
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Bet365 가상게임 배당 마진·공정배당 분석기 | 전 종목 | 88ST</title>
+<meta content="Bet365 가상게임(가상축구·농구·테니스·아이스하키·야구·미식축구·크리켓·경마·그레이하운드·레이싱 등) 배당을 입력하면 마진(오버라운드), 공정확률/공정배당, 공정대비(덜 불리한 선택)를 즉시 계산합니다. 오버/언더는 라인을 여러 개 한 번에 붙여넣기 지원." name="description"/>
+<meta content="가상스포츠 분석기, 가상축구 배당, 가상농구, 오즈 무브, EV, 마진, 공정배당, 88ST" name="keywords"/>
+<link href="https://88st.cloud/tool-virtual/" rel="canonical"/>
+<meta content="index,follow" name="robots"/>
+<meta content="website" property="og:type"/>
+<meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
+<meta content="Bet365 가상게임 배당 마진·공정배당 분석기 | 전 종목 | 88ST" property="og:title"/>
+<meta content="가상게임 배당을 넣으면 마진/공정확률/공정배당/공정대비(덜 불리한 선택)를 한 번에 계산합니다. 오버/언더 라인 다중 붙여넣기 지원." property="og:description"/>
+<meta content="https://88st.cloud/tool-virtual/" property="og:url"/>
+<script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebApplication",
@@ -29,20 +34,17 @@
     "offers": { "@type": "Offer", "price": "0", "priceCurrency": "KRW" }
   }
   </script>
-
-  <script defer src="/assets/js/j.9179477b9417.js"></script>
-  <script defer src="/assets/js/j.71bbe4a35d81.js"></script>
-  <script defer src="/assets/js/j.d2cf652ff950.js"></script>
-  <script defer src="/assets/js/j.efba3509e62c.js"></script>
-  <script defer src="/assets/js/j.8829a3ccde44.js?v=85"></script>
-
-  <link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
-  <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
-  <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
-  <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
-  <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-
-  <style>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
+<script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
+<script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
+<script defer="" src="/assets/js/j.efba3509e62c.js"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
+<link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
+<link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
+<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
+<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
+<link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<style>
     .controls{display:flex; flex-wrap:wrap; gap:10px; align-items:flex-end;}
     .controls .field{min-width:160px; flex:1;}
     .controls .field.small{min-width:130px; flex:0 1 160px;}
@@ -274,211 +276,189 @@
 
 </style>
 <link href="/assets/vvip-pro.v71.css?v=71" rel="stylesheet"/>
-<script defer src="/assets/js/vvip-pro.v71.js?v=71"></script>
-<script defer src="/assets/js/vvip-brief.v71.js?v=71"></script>
-
-  <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
-
-  <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
+<script defer="" src="/assets/js/vvip-pro.v71.js?v=71"></script>
+<script defer="" src="/assets/js/vvip-brief.v71.js?v=71"></script>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
-
 <body>
-  <div class="wrap">
-    <div class="hero">
-      <h1>Bet365 가상게임 전 종목 배당 마진·공정배당 분석기</h1>
-      <p>
+<div class="wrap">
+<div class="hero">
+<h1>Bet365 가상게임 전 종목 배당 마진·공정배당 분석기</h1>
+<p>
         종목/마켓을 고르고 배당을 넣으면 <b>마진(오버라운드)</b>, <b>공정확률/공정배당</b>, <b>공정대비(덜 불리한 선택)</b>를 즉시 계산합니다.<br/>
-        <span class="small">※ <b>내 확률 입력은 제거</b>했습니다. 이 페이지는 <b>마진/공정배당 기반의 구조 분석</b>에 집중합니다.</span>
-      </p>
-    </div>
-
-    <div class="grid">
-      <div class="card">
-        <div class="controls">
-          <div class="field">
-            <label for="sportSelect">종목</label>
-            <select id="sportSelect" class="select"></select>
-          </div>
-          <div class="field">
-            <label for="marketSelect">마켓</label>
-            <select id="marketSelect" class="select"></select>
-          </div>
-          <div class="field small" id="lineWrap" style="display:none">
-            <label for="lineValue" id="lineLabel">기준</label>
-            <input id="lineValue" class="in mono" inputmode="decimal" placeholder="예: 2.5" value=""/>
-          </div>
-        </div>
-
-        <div class="divider"></div>
-
-
-<div id="quickPasteWrap" class="qpWrap" style="display:none">
-  <div class="small qpTitle"><b>빠른 붙여넣기</b> <span class="qpMeta">(1줄=자동 적용 · 여러줄=마진 스캐너 TOP3)</span></div>
-  <textarea id="quickPasteInput" class="in textarea qp mono" placeholder="예: 팀A 2.35 3.40 2.90 팀B"></textarea>
-  <div class="small" id="quickPasteStatus" style="margin-top:8px;"></div>
-  <div id="scanTopWrap" style="display:none; margin-top:12px;">
-    <div class="small"><b>마진 스캐너 TOP3</b> <span class="qpMeta">(클릭하면 입력칸에 적용)</span></div>
-    <div class="scanGrid" id="scanTopList"></div>
-  </div>
+<span class="small">※ <b>내 확률 입력은 제거</b>했습니다. 이 페이지는 <b>마진/공정배당 기반의 구조 분석</b>에 집중합니다.</span>
+</p>
 </div>
-
-        <div id="pasteWrap" style="display:none">
-          <div class="small" id="pasteDesc">다중 마켓은 줄 단위로 붙여넣으면 자동 파싱됩니다.</div>
-          <div class="small mono" id="pasteHint" style="margin-top:6px;">예: 1번말 6.5</div>
-          <textarea id="pasteInput" class="in textarea mono" placeholder="한 줄에 하나씩 붙여넣기"></textarea>
-          <div class="small" id="pasteStatus" style="margin-top:8px;"></div>
-          <div class="divider"></div>
-        </div>
-
-        <div id="standardTableWrap">
-          <div class="tableWrap" style="margin-top:10px;">
-            <table class="tbl" aria-label="결과 테이블">
-              <thead>
-                <tr>
-                  <th>선택</th>
-                  <th>배당</th>
-                  <th>암시확률</th>
-                  <th>공정확률</th>
-                  <th>공정배당</th>
-                  <th>공정대비</th>
-                </tr>
-              </thead>
-              <tbody id="rowsBody"></tbody>
-            </table>
-          </div>
-        </div>
-
-        <div id="pairTableWrap" style="display:none">
-          <div class="small">오버/언더 라인을 <b>여러 개 한 번에</b> 붙여넣어 라인별 마진/공정배당을 비교합니다. (예: <span class="mono">2.5 1.90 1.95</span>)</div>
-          <div class="tableWrap" style="margin-top:10px;">
-            <table class="tbl" aria-label="라인별 결과 테이블">
-              <thead>
-                <tr>
-                  <th>라인</th>
-                  <th id="pairAName">오버 배당</th>
-                  <th id="pairBName">언더 배당</th>
-                  <th>마진</th>
-                  <th id="pairAFair">오버 공정배당</th>
-                  <th id="pairBFair">언더 공정배당</th>
-                  <th id="pairAAdv">오버 공정대비</th>
-                  <th id="pairBAdv">언더 공정대비</th>
-                  <th>베스트</th>
-                </tr>
-              </thead>
-              <tbody id="pairBody"></tbody>
-            </table>
-          </div>
-        </div>
-
-        <div class="divider"></div>
-
-        <!-- state bridge for global share/save/history (config-driven) -->
-        <input id="vState" type="hidden" value=""/>
-
-        <!-- sticky dock (table scroll에서도 따라오는 고정바) -->
-        <div class="actionDock" id="actionDock" aria-label="입력 도구 고정바">
-          <div class="dockLeft">
-            <div class="btn" id="calcBtn">즉시 계산</div>
-            <div class="btn secondary" id="resetBtn">초기화</div>
-          </div>
-          <div class="dockSpacer" aria-hidden="true"></div>
-          <div class="dockTools" id="dockTools">
-            <div class="dockCenter" id="dockCenter"></div>
-            <div class="dockRight" id="dockRight"></div>
-          </div>
-        </div>
-
-        <div class="subnote">
-          <div class="pill"><b>전 종목</b>·<b>승무패</b>·<b>오버/언더</b>·<b>핸디</b>·<b>다중 우승자</b> 통합 지원</div>
-          <div class="pill"><b>베스트</b>: 공정대비 ‘덜 불리’ 자동 표시</div>
-          <div class="pill"><b>속도</b>: 입력 중 버벅임 최소화</div>
-        </div>
-      </div>
-
-      <div class="card">
-        <h2>결과</h2>
-
-        <div class="kvBoard" aria-label="핵심 요약">
-          <div class="kvTile third">
-            <div class="k">오버라운드</div>
-            <div class="v mono" id="overround">-</div>
-          </div>
-          <div class="kvTile third">
-            <div class="k">마진</div>
-            <div class="v mono" id="margin">-</div>
-          </div>
-          <div class="kvTile third emph">
-            <div class="k">베스트(공정대비)</div>
-            <div class="v" id="bestPick">-</div>
-          </div>
-          <div class="kvTile full">
-            <div class="k">마켓/라인</div>
-            <div class="v mono" id="marketLine">-</div>
-          </div>
-        </div>
-
-
-
-
-        <div class="aiBrief" id="aiBrief" aria-label="AI 브리핑">
-          <div class="aiHead">
-            <div class="aiTitle">AI 브리핑</div>
-            <div class="aiScoreWrap">
-              <div class="aiScore" id="aiScore">-</div>
-              <div class="aiScoreLabel" id="aiScoreLabel">대기</div>
-            </div>
-          </div>
-          <div class="aiGrid">
-            <div class="aiCol">
-              <div class="aiK">주의</div>
-              <ul class="aiList" id="aiWarnList"><li>배당을 입력하면 자동 분석됩니다.</li></ul>
-            </div>
-            <div class="aiCol">
-              <div class="aiK">추천</div>
-              <ul class="aiList" id="aiRecoList"><li>마진이 낮은 마켓/라인을 우선하세요.</li></ul>
-            </div>
-          </div>
-          <div class="aiTags" id="aiTags"></div>
-        </div>
-<details class="vvip-pro vvip-pro--mt" id="vvipProVirtual" data-prokey="virtual-pro">
-  <summary>
-    <div class="sum-left">🛠️ PRO (근거·세부룰)</div>
-    <div class="sum-badge">접기/펼치기</div>
-  </summary>
-  <div class="vvip-pro-body">
+<div class="grid">
+<div class="card">
+<div class="controls">
+<div class="field">
+<label for="sportSelect">종목</label>
+<select class="select" id="sportSelect"></select>
+</div>
+<div class="field">
+<label for="marketSelect">마켓</label>
+<select class="select" id="marketSelect"></select>
+</div>
+<div class="field small" id="lineWrap" style="display:none">
+<label for="lineValue" id="lineLabel">기준</label>
+<input class="in mono" id="lineValue" inputmode="decimal" placeholder="예: 2.5" value=""/>
+</div>
+</div>
+<div class="divider"></div>
+<div class="qpWrap" id="quickPasteWrap" style="display:none">
+<div class="small qpTitle"><b>빠른 붙여넣기</b> <span class="qpMeta">(1줄=자동 적용 · 여러줄=마진 스캐너 TOP3)</span></div>
+<textarea class="in textarea qp mono" id="quickPasteInput" placeholder="예: 팀A 2.35 3.40 2.90 팀B"></textarea>
+<div class="small" id="quickPasteStatus" style="margin-top:8px;"></div>
+<div id="scanTopWrap" style="display:none; margin-top:12px;">
+<div class="small"><b>마진 스캐너 TOP3</b> <span class="qpMeta">(클릭하면 입력칸에 적용)</span></div>
+<div class="scanGrid" id="scanTopList"></div>
+</div>
+</div>
+<div id="pasteWrap" style="display:none">
+<div class="small" id="pasteDesc">다중 마켓은 줄 단위로 붙여넣으면 자동 파싱됩니다.</div>
+<div class="small mono" id="pasteHint" style="margin-top:6px;">예: 1번말 6.5</div>
+<textarea class="in textarea mono" id="pasteInput" placeholder="한 줄에 하나씩 붙여넣기"></textarea>
+<div class="small" id="pasteStatus" style="margin-top:8px;"></div>
+<div class="divider"></div>
+</div>
+<div id="standardTableWrap">
+<div class="tableWrap" style="margin-top:10px;">
+<table aria-label="결과 테이블" class="tbl">
+<thead>
+<tr>
+<th>선택</th>
+<th>배당</th>
+<th>암시확률</th>
+<th>공정확률</th>
+<th>공정배당</th>
+<th>공정대비</th>
+</tr>
+</thead>
+<tbody id="rowsBody"></tbody>
+</table>
+</div>
+</div>
+<div id="pairTableWrap" style="display:none">
+<div class="small">오버/언더 라인을 <b>여러 개 한 번에</b> 붙여넣어 라인별 마진/공정배당을 비교합니다. (예: <span class="mono">2.5 1.90 1.95</span>)</div>
+<div class="tableWrap" style="margin-top:10px;">
+<table aria-label="라인별 결과 테이블" class="tbl">
+<thead>
+<tr>
+<th>라인</th>
+<th id="pairAName">오버 배당</th>
+<th id="pairBName">언더 배당</th>
+<th>마진</th>
+<th id="pairAFair">오버 공정배당</th>
+<th id="pairBFair">언더 공정배당</th>
+<th id="pairAAdv">오버 공정대비</th>
+<th id="pairBAdv">언더 공정대비</th>
+<th>베스트</th>
+</tr>
+</thead>
+<tbody id="pairBody"></tbody>
+</table>
+</div>
+</div>
+<div class="divider"></div>
+<!-- state bridge for global share/save/history (config-driven) -->
+<input id="vState" type="hidden" value=""/>
+<!-- sticky dock (table scroll에서도 따라오는 고정바) -->
+<div aria-label="입력 도구 고정바" class="actionDock" id="actionDock">
+<div class="dockLeft">
+<div class="btn" id="calcBtn">즉시 계산</div>
+<div class="btn secondary" id="resetBtn">초기화</div>
+</div>
+<div aria-hidden="true" class="dockSpacer"></div>
+<div class="dockTools" id="dockTools">
+<div class="dockCenter" id="dockCenter"></div>
+<div class="dockRight" id="dockRight"></div>
+</div>
+</div>
+<div class="subnote">
+<div class="pill"><b>전 종목</b>·<b>승무패</b>·<b>오버/언더</b>·<b>핸디</b>·<b>다중 우승자</b> 통합 지원</div>
+<div class="pill"><b>베스트</b>: 공정대비 ‘덜 불리’ 자동 표시</div>
+<div class="pill"><b>속도</b>: 입력 중 버벅임 최소화</div>
+</div>
+</div>
+<div class="card">
+<h2>결과</h2>
+<div aria-label="핵심 요약" class="kvBoard">
+<div class="kvTile third">
+<div class="k">오버라운드</div>
+<div class="v mono" id="overround">-</div>
+</div>
+<div class="kvTile third">
+<div class="k">마진</div>
+<div class="v mono" id="margin">-</div>
+</div>
+<div class="kvTile third emph">
+<div class="k">베스트(공정대비)</div>
+<div class="v" id="bestPick">-</div>
+</div>
+<div class="kvTile full">
+<div class="k">마켓/라인</div>
+<div class="v mono" id="marketLine">-</div>
+</div>
+</div>
+<div aria-label="AI 브리핑" class="aiBrief" id="aiBrief">
+<div class="aiHead">
+<div class="aiTitle">AI 브리핑</div>
+<div class="aiScoreWrap">
+<div class="aiScore" id="aiScore">-</div>
+<div class="aiScoreLabel" id="aiScoreLabel">대기</div>
+</div>
+</div>
+<div class="aiGrid">
+<div class="aiCol">
+<div class="aiK">주의</div>
+<ul class="aiList" id="aiWarnList"><li>배당을 입력하면 자동 분석됩니다.</li></ul>
+</div>
+<div class="aiCol">
+<div class="aiK">추천</div>
+<ul class="aiList" id="aiRecoList"><li>마진이 낮은 마켓/라인을 우선하세요.</li></ul>
+</div>
+</div>
+<div class="aiTags" id="aiTags"></div>
+</div>
+<details class="vvip-pro vvip-pro--mt" data-prokey="virtual-pro" id="vvipProVirtual">
+<summary>
+<div class="sum-left">🛠️ PRO (근거·세부룰)</div>
+<div class="sum-badge">접기/펼치기</div>
+</summary>
+<div class="vvip-pro-body">
 <div class="cmpWrap" id="cmpWrap">
-  <div class="cmpHead">
-    <div class="small"><b>Multi View</b> · A/B 비교 보드</div>
-    <div class="cmpBtns">
-      <button type="button" class="cmpBtn" id="cmpSaveA">A 저장</button>
-      <button type="button" class="cmpBtn" id="cmpSaveB">B 저장</button>
-      <button type="button" class="cmpBtn ghost" id="cmpSwap">A↔B</button>
-      <button type="button" class="cmpBtn ghost" id="cmpClear">초기화</button>
-    </div>
-  </div>
-  <div class="cmpGrid" id="cmpGrid">
-    <div class="cmpCard" id="cmpA"></div>
-    <div class="cmpCard" id="cmpB"></div>
-  </div>
-  <div class="small" id="cmpDelta" style="margin-top:8px; opacity:.85;"></div>
+<div class="cmpHead">
+<div class="small"><b>Multi View</b> · A/B 비교 보드</div>
+<div class="cmpBtns">
+<button class="cmpBtn" id="cmpSaveA" type="button">A 저장</button>
+<button class="cmpBtn" id="cmpSaveB" type="button">B 저장</button>
+<button class="cmpBtn ghost" id="cmpSwap" type="button">A↔B</button>
+<button class="cmpBtn ghost" id="cmpClear" type="button">초기화</button>
 </div>
-        <div class="sep"></div>
-        <div class="small" id="explain">
+</div>
+<div class="cmpGrid" id="cmpGrid">
+<div class="cmpCard" id="cmpA"></div>
+<div class="cmpCard" id="cmpB"></div>
+</div>
+<div class="small" id="cmpDelta" style="margin-top:8px; opacity:.85;"></div>
+</div>
+<div class="sep"></div>
+<div class="small" id="explain">
           공정확률/공정배당은 입력 배당의 암시확률을 정규화해 계산합니다. “공정대비”는 그 공정배당 대비 얼마나 덜 불리한지(상대지표)를 보여줍니다.
         </div>
-  </div>
+</div>
 </details>
-
 <div style="margin-top:12px;">
-          <span class="chip neu" id="healthChip">대기</span>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script src="../assets/js/inline-bundles/b.virtual.v40.luxe.9f01c2.js?v=70"></script>
-  <script id="__88stToolConfig" type="application/json" data-src="../assets/config/toolconfig/c.4b8e8f74b9.json"></script>
-  <script>
+<span class="chip neu" id="healthChip">대기</span>
+</div>
+</div>
+</div>
+</div>
+<script src="../assets/js/inline-bundles/b.virtual.v40.luxe.9f01c2.js?v=70"></script>
+<script data-src="../assets/config/toolconfig/c.4b8e8f74b9.json" id="__88stToolConfig" type="application/json"></script>
+<script>
     // Mobile/desktop dock polish: keep tools compact and insert a subtle divider between "예시" and "공유/저장/히스토리".
     (function(){
       function setupDockDivider(){
@@ -518,6 +498,6 @@
       }
     })();
   </script>
-  <script defer src="/assets/js/j.025d649c8b11.js"></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
