--- a/tool/fair-odds/index.html
+++ b/tool/fair-odds/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/><meta content="공정배당 계산기, fair odds, 마진 제거, 비그(vig) 제거, 공정확률, 오버라운드, 암시확률, 배당 비교" name="keywords"/>
+<meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
+<meta content="공정배당 계산기, fair odds, 암시확률, 마진 제거, 공정확률, 라인 비교, value bet, 88ST" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>공정배당 계산기 | 마진 제거·Fair Odds | 88ST</title>
 <meta content="배당에서 마진(오버라운드/비그)을 제거해 공정확률과 공정배당(Fair Odds)을 계산합니다. 서로 다른 배당을 같은 기준으로 비교할 때 사용하세요." name="description"/>
@@ -35,7 +43,7 @@
   ]
 }
 </script>
-<script defer src="/assets/js/j.9179477b9417.js"></script>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
 <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
@@ -45,9 +53,8 @@
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
 <meta content="/img/logo.png" property="og:image"/>
-  <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
-
-  <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body>
 <div class="wrap">
@@ -109,7 +116,6 @@
 </div>
 <script src="../../assets/js/inline-bundles/b.b96b8d09fc.js"></script>
 <script data-src="../../assets/config/toolconfig/c.8ad1622c66.json" id="__88stToolConfig" type="application/json"></script>
-
 <div class="card" style="margin-top:12px;">
 <h2>자주 묻는 질문(FAQ)</h2>
 <div class="faq">
