--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/><meta content="입플 체크리스트, 입금플러스, 첫충 보너스, 페이백 조건, 롤링 조건, 출금 규정, 제외 게임, 최대 지급, 보너스 이용약관, 카지노 입플, 슬롯 입플" name="keywords"/>
+<meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
+<meta content="보너스 체크리스트, 입플 체크, 첫충, 페이백, 롤링 조건, 제외 게임, 출금 규정, 최대지급, 제한 조건, 88ST" name="keywords"/>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 <title>입플 체크리스트 | 롤링·제외게임·출금규정 10초 점검 | 88ST</title>
 <meta content="입플(입금플러스)·첫충·페이백 보너스 이용 전, 롤링/제외게임/최대지급/기간/출금 규정을 10초 체크리스트로 점검하세요. 조건 비교 팁과 계산기 링크까지 정리." name="description"/>
@@ -32,16 +40,15 @@
   ]
 }
 </script>
-<script defer src="/assets/js/j.9179477b9417.js"></script>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
 <link href="https://88st.cloud/bonus-checklist/" rel="canonical"/><meta content="https://88st.cloud/bonus-checklist/" property="og:url"/><meta content="/img/logo.png" property="og:image"/>
-  <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
-
-  <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body>
 <div class="wrap">
