--- a/casino/landing-a_index.html
+++ b/casino/landing-a_index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/><meta content="입플, 보너스, 페이백, 롤링, 출금 규정, 체크리스트, EV 계산기, 배당 마진" name="keywords"/>
+<meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
+<meta content="카지노 가이드, 보너스 조건, 페이백, 롤링, 출금 규정, 프로모션, 제한 조건, 자금관리, 88ST" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>입플·보너스·페이백 분석기 | 88ST</title>
 <meta content="입플/보너스/페이백 조건과 체크리스트, 계산기 링크를 한 곳에서 확인하세요." name="description"/>
@@ -29,16 +37,15 @@
   ]
 }
 </script>
-<script defer src="/assets/js/j.9179477b9417.js"></script>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
 <meta content="입플·보너스·페이백 분석기 | 88ST" property="og:title"/><meta content="입플/보너스/페이백 조건과 체크리스트, 계산기 링크를 한 곳에서 확인하세요." property="og:description"/><meta content="website" property="og:type"/><meta content="https://88st.cloud/landing-a/" property="og:url"/><meta content="/img/logo.png" property="og:image"/>
-  <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
-
-  <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body>
 <div class="wrap">
