--- a/ipl/index.html
+++ b/ipl/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/><meta content="입금플러스, 입플 조건, 첫충, 재충 보너스, 페이백, 롤링, 출금 조건, 환전 조건, 제외 게임, 보너스 약관" name="keywords"/>
+<meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
+<meta content="입금플러스, 입플, 첫충, 페이백, 가입코드, 롤링 조건, 제외 게임, 출금 규정, 카지노 보너스, 88ST" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>입금플러스(입플)·첫충·페이백 조건 정리 | 88ST</title>
 <meta content="입금플러스(입플)·첫충·재충·페이백 조건을 한눈에 정리하고, 롤링/제외게임/환전/기간/최대지급 규정을 빠르게 확인하세요." name="description"/>
@@ -35,25 +43,24 @@
   ]
 }
 </script>
-<script defer src="/assets/js/j.9179477b9417.js"></script>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
 <meta content="/img/logo.png" property="og:image"/>
-  <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
-
-  <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body>
-<div class="scam-popup" id="scamPopup" role="region" aria-label="사칭 주의 안내">
+<div aria-label="사칭 주의 안내" class="scam-popup" id="scamPopup" role="region">
 <div class="scam-box">
-  <div class="scam-left">
-    <div class="scam-ic">⚠</div>
-    <div class="scam-msg"><b>사칭 주의</b> · 공식 관리자 텔레그램은 <b>@UZU59</b> 단 하나입니다. 다른 계정 주의</div>
-  </div>
-  <div class="btn" data-d8593ac4d="VQkTbQtZrbr_">확인</div>
+<div class="scam-left">
+<div class="scam-ic">⚠</div>
+<div class="scam-msg"><b>사칭 주의</b> · 공식 관리자 텔레그램은 <b>@UZU59</b> 단 하나입니다. 다른 계정 주의</div>
+</div>
+<div class="btn" data-d8593ac4d="VQkTbQtZrbr_">확인</div>
 </div>
 </div>
 <div class="wrap st-guide" role="main">
