--- a/tool/ev/index.html
+++ b/tool/ev/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/><meta content="EV 계산기, 기대값 계산기, +EV, 밸류베팅" name="keywords"/>
+<meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
+<meta content="EV 계산기, 기대값 계산, 배당 EV, 승률 추정, 손익분기점, 기대수익, 확률 기반 베팅, value bet, 88ST" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>EV(기대값) 계산기 | +EV 밸류 체크 | 88ST</title>
 <meta content="배당과 내 추정 확률을 입력하면 EV(기대값)과 +EV/-EV 여부, 기대수익을 계산합니다. (기본 도구 페이지)" name="description"/>
@@ -35,7 +43,7 @@
   ]
 }
 </script>
-<script defer src="/assets/js/j.9179477b9417.js"></script>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
 <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
@@ -45,9 +53,8 @@
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
 <meta content="/img/logo.png" property="og:image"/>
-  <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
-
-  <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body>
 <div class="wrap">
@@ -102,7 +109,6 @@
 </div>
 <script src="../../assets/js/inline-bundles/b.ed7178f765.js"></script>
 <script data-src="../../assets/config/toolconfig/c.b51dd8e9e9.json" id="__88stToolConfig" type="application/json"></script>
-
 <div class="card" style="margin-top:12px;">
 <h2>자주 묻는 질문(FAQ)</h2>
 <div class="faq">
